solo guardo en index

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div class="container">
-        
+        <header>
+            <h1>Hola, estoy jugando con Git</h1>
+        </header>
+
     </div>
 
 
